Add support for source_path to the field caps API.